--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 <div class="container">
 
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
+
 <article>
   <h2>10 Simple Morning Habits That Build a Healthy Lifestyle Naturally</h2>
   <p><strong>Published:</strong> 26 December 2025</p>
@@ -117,7 +118,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 <hr>
 
 
-
+  <p><strong>Conclusion</strong><br>
+  Small morning habits practiced daily create powerful long-term health benefits.</p>
 </div>
 
 </div>
