Add Article 1 to blog

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,16 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   <a href="blog.html">Blog</a>
 </nav>
 
-<div class="container">
+<div >
+<h2>Articles</h2>
+
+<ul>
+  <li>
+    <a href="article1.html">
+      10 Simple Morning Habits That Build a Healthy Lifestyle
+    </a>
+  </li>
+</ul>
 
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
@@ -130,3 +139,4 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
