Add article2 link to blog

--- a/blog.html
+++ b/blog.html
@@ -43,6 +43,12 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   </li>
 </ul>
 
+  <li>
+  <a href="article2.html">
+    7 Daily Habits That Improve Mental Peace and Focus
+  </a>
+</li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -57,6 +63,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
