--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ footer{
  <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
+  <a href="contact.html">Contact</a> 
+   <a href="blog.html">Blog</a>
 </nav>
 
   
@@ -157,3 +158,4 @@ footer{
 
 </body>
 </html>
+
