Added article 3 - healthy lifestyle

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   </a>
 </li>
 
+  <li><a href="article3.html">Simple Daily Habits for a Healthy Lifestyle</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -63,6 +65,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
