--- a/blog.html
+++ b/blog.html
@@ -51,7 +51,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article3.html">Simple Daily Habits for a Healthy Lifestyle</a></li>
 
-  <li><a href="article4.html">The Importance of Drinking Enough Water Every Day</a></li>
+  <li><a href="article.html">The Importance of Drinking Enough Water Every Day</a></li>
 
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
@@ -67,6 +67,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
