--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
   <a href="blog.html">Blog</a>
+  <a href="privacy-policy.html">Privacy Policy</a>
+
 </nav>
 
 <div >
@@ -67,6 +69,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
