--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ footer{
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a> 
    <a href="blog.html">Blog</a>
+   <a href="privacy-policy.html">Privacy Policy</a>
+
 </nav>
 
   
@@ -158,4 +160,5 @@ footer{
 
 </body>
 </html>
+
 
