Updated index page

--- a/blog.html
+++ b/blog.html
@@ -55,6 +55,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="articles.html">The Importance of Drinking Enough Water Every Day</a></li>
 
+  <li><a href="article4.html">Benefits of Daily Walking for a Healthy Lifestyle</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -69,6 +71,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
