Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -57,6 +57,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article4.html">Benefits of Daily Walking for a Healthy Lifestyle</a></li>
 
+  <li><a href="article6.html">How Meditation Helps Improve Overall Health and Well-Being</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -71,6 +73,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
