Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -59,6 +59,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article6.html">How Meditation Helps Improve Overall Health and Well-Being</a></li>
 
+  <li><a href="article7.html">How a Free Mind and Relaxation Help in Better Health Management</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -73,6 +75,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
