Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article7.html">How a Free Mind and Relaxation Help in Better Health Management</a></li>
 
+  <li><a href="article8.html">How a Positive Mindset Leads to a Healthy Life</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -75,6 +77,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
