Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -63,6 +63,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article8.html">How a Positive Mindset Leads to a Healthy Life</a></li>
 
+  <li><a href="article9.html">How Entertainment Helps Improve Physical and Mental Health</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -77,6 +79,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
