--- a/blog.html
+++ b/blog.html
@@ -65,6 +65,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article9.html">How Entertainment Helps Improve Physical and Mental Health</a></li>
 
+  <li><a href="article10.html">How Pet Animals and Happy Moments Improve Overall Health</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -79,6 +81,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
