--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article10.html">How Pet Animals and Happy Moments Improve Overall Health</a></li>
 
+  <li><a href="article11.html">How Healthy Relationships Improve Physical and Mental Health</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -81,6 +83,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
