--- a/blog.html
+++ b/blog.html
@@ -69,6 +69,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article11.html">How Healthy Relationships Improve Physical and Mental Health</a></li>
 
+  <li><a href="article12.html">Why Consulting Doctors Regularly Is Important for Good Health</a></li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -83,6 +85,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
