--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,9 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   <li><a href="article11.html">How Healthy Relationships Improve Physical and Mental Health</a></li>
 
   <li><a href="article12.html">Why Consulting Doctors Regularly Is Important for Good Health</a></li>
+<li><a href="article13.html">How Food Control and Regular Exercise Support a Healthy Life</a></li>
 
+  
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -85,6 +87,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
