Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
   <li><a href="article12.html">Why Consulting Doctors Regularly Is Important for Good Health</a></li>
 <li><a href="article13.html">How Food Control and Regular Exercise Support a Healthy Life</a></li>
 
+  <li><a href="article14.html">How Courage and Confidence Support Mental and Physical Health</a></li>
+
   
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
@@ -87,6 +89,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
