Updated blog page

--- a/blog.html
+++ b/blog.html
@@ -74,6 +74,8 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article14.html">How Courage and Confidence Support Mental and Physical Health</a></li>
 
+  <li><a href="article15.html">How Love and Affection Improve Mental and Physical Health</a></li>
+
   
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
@@ -89,6 +91,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
