Added Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 <meta name="description" content="MI Online Web Blogger is a healthy lifestyle and wellness website focusing on fitness, mental health, meditation, healthy diet, and peaceful living.">
 <meta name="keywords" content="healthy lifestyle, wellness, fitness, meditation, mental health, healthy diet">
 
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DBG3YKSDE5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-DBG3YKSDE5');
+</script>
+
 <style>
 body{
   margin:0;
@@ -160,5 +169,6 @@ footer{
 
 </body>
 </html>
+
 
 
