--- a/article17.html
+++ b/article17.html
@@ -8,6 +8,8 @@
 
   <meta name="keywords" content="good communication, stress reduction, healthy mind, healthy body, mental wellness, healthy lifestyle">
 
+  <link rel="canonical" href="https://magiindur.github.io/article17.html">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
