Added canonical tag to article16

--- a/article16.html
+++ b/article16.html
@@ -9,6 +9,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Discover how family coordination and harmonious relationships contribute to a healthy lifestyle, emotional well-being, and a peaceful life.">
     <meta name="keywords" content="healthy lifestyle, family coordination, harmonious relationships, family harmony, emotional health, mental wellness, peaceful life">
+    <link rel="canonical" href="https://magiindur.github.io/article16.html">
     <meta name="author" content="Magiindur">
 
     <!-- Open Graph for Sharing -->
