Added canonical tag to blog page

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
 <title>Healthy Lifestyle Blog | MI Online Web Blogger</title>
 <meta name="description" content="Daily healthy lifestyle articles on fitness, mental health, meditation, diet, and peaceful living.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="canonical" href="https://magiindur.github.io/blog.html">
 
 <style>
 body{font-family:Arial,Helvetica,sans-serif;background:#f5fbf7;margin:0;color:#333}
@@ -91,6 +92,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
