Added canonical tag to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <meta name="description" content="MI Online Web Blogger is a healthy lifestyle and wellness website focusing on fitness, mental health, meditation, healthy diet, and peaceful living.">
 <meta name="keywords" content="healthy lifestyle, wellness, fitness, meditation, mental health, healthy diet">
+<link rel="canonical" href="https://magiindur.github.io/index.html">
 
   <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBG3YKSDE5"></script>
@@ -169,6 +170,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
