Linked article17 to blog page

--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,13 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
   <li><a href="article15.html">How Love and Affection Improve Mental and Physical Health</a></li>
 <li><a href="article16.html">Healthy Lifestyle Through Family Coordination: The Foundation of a Harmonious Life</a></li>
-  
+
+  <li>
+  <a href="article17.html">
+    Good Communication Reduces Stress and Creates a Healthy Mind and Body
+  </a>
+</li>
+
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -92,6 +98,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
