Linked article18 to blog page

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,13 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
     Good Communication Reduces Stress and Creates a Healthy Mind and Body
   </a>
 </li>
+<li>
+  <a href="article18.html">
+    Calm Conversations and Their Healing Effect on Mind and Body
+  </a>
+</li>
 
+  
 <!-- NEW ARTICLES WILL BE ADDED ABOVE THIS LINE -->
 
 
@@ -98,6 +104,7 @@ footer{background:#2e8b57;color:#fff;text-align:center;padding:15px}
 
 </body>
 </html>
+
 
 
 
