Add articles list to homepage

--- a/index.html
+++ b/index.html
@@ -149,6 +149,25 @@ footer{
 
   </div>
 
+  <div class="card">
+  <h2>Articles</h2>
+  <ul>
+    <li><a href="article1.html">10 Simple Morning Habits That Build a Healthy Lifestyle</a></li>
+    <li><a href="article2.html">7 Daily Habits That Improve Mental Peace and Focus</a></li>
+    <li><a href="article3.html">Simple Daily Habits for a Healthy Lifestyle</a></li>
+    <li><a href="article4.html">The Importance of Drinking Enough Water Every Day</a></li>
+    <li><a href="article5.html">Benefits of Daily Walking for a Healthy Lifestyle</a></li>
+    <li><a href="article6.html">How Meditation Helps Improve Overall Health and Well-Being</a></li>
+    <li><a href="article7.html">How a Free Mind and Relaxation Help in Better Health Management</a></li>
+    <li><a href="article8.html">How a Positive Mindset Leads to a Healthy Life</a></li>
+    <li><a href="article9.html">How Entertainment Helps Improve Physical and Mental Health</a></li>
+    <li><a href="article10.html">How Pet Animals and Happy Moments Improve Overall Health</a></li>
+    <li><a href="article11.html">How Healthy Relationships Improve Physical and Mental Health</a></li>
+    <li><a href="article12.html">Why Consulting Doctors Regularly Is Important for Good Health</a></li>
+    <li><a href="article13.html">How Food Control and Regular Exercise Support a Healthy Life</a></li>
+    <li><a href="article14.html">How Courage and Confidence Support Mental and Physical Health</a></li>
+    <li><a href="article15.html">How Love and Affection Improve Mental and Physical Health</a></
+
   <div class="sidebar">
     <h3>Categories</h3>
     <ul>
@@ -170,6 +189,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
