Fix articles list and add article20

--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@ footer{
     <li><a href="article13.html">How Food Control and Regular Exercise Support a Healthy Life</a></li>
     <li><a href="article14.html">How Courage and Confidence Support Mental and Physical Health</a></li>
     <li><a href="article15.html">How Love and Affection Improve Mental and Physical Health</a></
+<li><a href="article16.html">Healthy Lifestyle Through Family Coordination</a></li>
+<li><a href="article17.html">Calm Conversations and Their Healing Effect on Mind and Body</a></li>
+<li><a href="article18.html">Good Communication Reduces Stress and Creates a Healthy Mind and Body</a></li>
+<li><a href="article19.html">Healthy Eating and Balanced Nutrition for a Better Life</a></li>
+<li><a href="article20.html"><strong>Entertainment for a Healthy Mind – Forget Worries and Live Stress Free</strong></a></li>
+</ul>
+</div>
 
+      
   <div class="sidebar">
     <h3>Categories</h3>
     <ul>
@@ -189,6 +197,7 @@ footer{
 
 </body>
 </html>
+
 
 
 
